Deploy/RabbitMQ/namespace.yaml
## All resources will be created in this namespace
## To delete all resources created by this example, simply delete this namespace:
apiVersion: v1
kind: Namespace
metadata:
  name: "edma-hercules"
