Deploy/RabbitMQ/service_rabbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: "edma-hercules"
spec:
  type: ClusterIP
  sessionAffinity: None
  #type: ExternalName
  #externalName: rabbitmq.hercules
  ports:
  - name: epmd
    protocol: TCP
    port: 4369
    targetPort: 4369
  - name: cluster-rpc
    protocol: TCP
    port: 25672
    targetPort: 25672
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: administrador
    protocol: TCP
    port: 15672
    targetPort: 15672
  selector:
    app: rabbitmq
