Deploy/RabbitMQ/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hercules-ingress-01
  namespace: "edma-hercules"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rabbit.hercules.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "rabbitmq"
            port:
              number: 15672
